Fixing whitespace between the team-members

--- a/css/style.scss
+++ b/css/style.scss
@@ -454,14 +454,12 @@ $m-100: 100%;
   width:100%;
 }
 .core {
-  white-space: nowrap;
   margin: 1.5rem;
   .team-member{
     width:50%;
   }
 }
 .crew{
-  white-space: nowrap;
   margin: 1.5rem;
   .team-member{
     width:25%;
